--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Batch update Dialogflow intents across different agents",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ints.js"
   },
   "repository": {
     "type": "git",
